2011-12-30  Rene Liebscher <R.Liebscher@gmx.de>

	patch #7693: Fix config file atmel URLs
	* avrdude.conf.in: Updated URLs
	* avrpart.h: Updated URLs
	* doc/avrdude.texi: Updated URLs

2011-12-30  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* ser_posix.c (baud_lookup_table): Conditionalize the inclusion of
	non-standard baud rates (only baud rates up to B38400 are
	standardized by the Single UNIX Specification).

2011-12-29  Rene Liebscher <R.Liebscher@gmx.de>

	bug #34302: Feature request : device configuration with parent classes
	* config_gram.y: Added part parent rule and allow overwriting existing
	data at several places
	* avrdude.conf.in: Added description comment and m328/m328p as example
	* avrpart.c: avr_dup_mem-functions now copy buf and tags memory block 
	only they are already allocated.
	* lexer.l: Added parent as valid token
	
	(not in original patch) 
	* avrpart.c: New function avr_dup_opcode. avr_dup_mem/avr_dup_part-
	functions now duplicate the opcodes in their op-array to avoid memory leaks.
	* doc/avrdude.texi: Added description of part parent feature

2011-12-29  Rene Liebscher <R.Liebscher@gmx.de>

	patch #7687: Autogenerating programmers and parts lists for docs
	(generating the parts lists, programmers lists follows later)
	* doc/Makefile.am: Add rule how to create avrdude before generating parts list

2011-12-29  Rene Liebscher <R.Liebscher@gmx.de>

	patch #7687: Autogenerating programmers and parts lists for docs
	(generating the parts lists, programmers lists follows later)
	* doc/avrdude.texi: Add include of generated table of parts
	* doc/Makefile.am: Add generating of table of parts in parts.texi
	* doc/parts_comments.txt: Adding file containing part commenz references
	* avrdude.1: Remove table of parts and mention "-p ?" option
	* avrpart.c: Use AVR_DESCLEN for strncasecmp at list sorting

2011-12-22  Rene Liebscher <R.Liebscher@gmx.de>

	* configure.ac: Add writing of definition of confsubst to config.status,